MSVSCPP_FILES = \
	fusn_test_error/fusn_test_error.vcproj \
	fusn_test_record/fusn_test_record.vcproj \
	fusn_test_support/fusn_test_support.vcproj \
	libcerror/libcerror.vcproj \
	libcnotify/libcnotify.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfusn/libfusn.vcproj \
	libuna/libuna.vcproj \
	libfusn.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

DISTCLEANFILES = \
	Makefile \
	Makefile.in

